--- a/css/style.css
+++ b/css/style.css
@@ -3,57 +3,82 @@ html {
 }
 
 body {
-    margin: 0;
+    margin     : 0;
+    padding    : 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 * {
     box-sizing: border-box;
 }
 
-.calculator {
-    display: flex;    
+.main--style {
+    display         : flex;
+    align-items     : center;
+    justify-content : center;
+    background-color: rgb(220, 220, 220);
+    position        : fixed;
+    top             : 0;
+    left            : 0;
+    right           : 0;
+    bottom          : 0;
+}
+
+.calc__body {
+    display         : flex;
+    flex-direction  : column;
+    background-color: rgb(255, 255, 255);
+    border          : 1px solid rgb(200, 200, 200);
+    padding         : .5rem;
+}
+
+.calc__display {
+    border         : 2px solid rgb(242, 242, 242);
+    font-size      : 1.5rem;
+    padding        : 1rem;
+    margin         : .2rem;
+    flex           : 1 0 auto;
+    height         : 3rem;
+    display        : flex;
+    align-items    : center;
+    justify-content: flex-end;
+}
+
+.calc__buttonRows {
+    display       : flex;
+    flex-direction: row;
+}
+
+.calc__row {
+    display       : flex;
     flex-direction: column;
-    width: max-content;
 }
 
-.calculator__buttons {
-    display: inline-flex;
+.calc__btn {
+    font-family    : 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size      : 1.2rem;
+    padding        : .5rem 1.7rem;
+    margin         : .3rem;
+    border         : 1px solid rgb(232, 232, 232);
+    align-items    : center;
+    justify-content: center;
 }
 
-.calculator__column {
-    display: flex;
-    flex-direction: column;
-    width: 4rem;
+.btn__digit {
+    background-color: rgb(221, 221, 221);
 }
 
-.calculator__button {
-    background: #EEE;
-    border: 1px solid #bbb;
-    border-radius: .1rem;
-    display: block;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    margin: .25rem .125rem;
+.btn__operator {
+    background-color: rgb(221, 221, 221);
 }
 
-.calculator__button--darker {
-    background: #ddd;
+.btn__equation {
+    flex            : 1 0 auto;
+    background-color: rgb(77, 143, 253);
+    color           : rgb(255, 255, 255);
 }
 
-.calculator__button--equal {
-    background: #5885ff;
-    color: #fff;
-    flex-grow: 1;
-}
-
-.calculator__output {
-    text-align: center;
-}
-
-.calculator__output-value {
-    border: 1px solid #bbb;
-    border-radius: .1rem;
-    margin: .25rem .125rem;
-    padding: .5rem;
-    width: calc(100% - .25rem);
+.btn__clear {
+    background-color: rgb(255, 0, 0);
+    color           : rgb(255, 255, 255);
 }
